
* Release history

** v0.5.0

- Much improved aider-comint-mode rendering
  - Use color from markdown-mode.el. It support more than code block highlight

** v0.4.0

- User side change
  - Aider prompt file have
    - aider command syntax highlight
    - aider command completion
    - file name completion
    - prompt enter / completion from mini-buffer / helm
  - Aider session have
    - aider command completion
    - file name completion
    - prompt enter / completion from mini-buffer / helm

- Developer side change
  - Add aider-comint-mode major mode in aider-core.el, for aider comint buffer. It derived from comint-mode
  - Move aider command completion and file name completion to aider-core.el since they are used in both aider prompt file and aider comint buffer

** v0.3.0

- User side change
  - Menu: Simplify menu to make it fit the screen: Thanks Spike-Leung
    - Group operations into same menu item. Less used one bind to C-u
    - https://github.com/tninja/aider.el/pull/93
  - Improve the mini buffer prompt re-usability
    - Make the use entered prompt in history more reusable across project.
    - Highly recommend to use aider-helm.el for better prompt history search experience.
    - https://github.com/tninja/aider.el/pull/94
  - Add snippets support to aider prompt file
    - Initial snippet came from reddit user LorestForest
    - https://github.com/tninja/aider.el/pull/101

- Developer side change
  - https://github.com/tninja/aider.el/pull/101
  - Deprecate aider-minor-mode, use aider-prompt-mode (major-mode) instead
    - aider-prompt-mode inherit from org-mode
  - Large refactoring to aider.el, break it into several small files, to help future development and maintaining
    - aider-core.el: core comint aider session interaction function
      - also have customize variables
    - aider-file.el: file operation related functions
      - depend on aider-core.el
    - aider-code-change.el: code change related functions